test/compile-fail/fn__main_ret_type_str.he
fn main : &str //~ ERROR 3001
{
}
